# diffure

./: Makefile  Makefile.in  README.md  configure.ac  default.nix  diffure.nix  flake.nix
src/: args.c  args.h  errors.c  errors.h  helpers.c  helpers.h  main.c  main.h  os.c  os.h
